# invoice-manage

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCT.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: admin_ocr.py  admin_users.py  auth.py  dashboard.py  documents.py  exports.py  health.py  invoices.py  ocr_jobs.py  ocr_quota.py  projects.py  review.py  search.py
backend/app/core/: audit.py  config.py  errors.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/domain/: __init__.py
backend/app/domain/dashboard/: __init__.py  service.py
backend/app/domain/export/: __init__.py  models.py  service.py
backend/app/domain/file/: __init__.py  models.py  pdf.py  storage.py  validators.py
backend/app/domain/invoice/: __init__.py  duplicate.py  models.py  service.py
backend/app/domain/ocr/: client.py  (+9 more)
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_admin_ocr_provider_api.py  test_admin_users.py  test_audit.py  test_auth.py  test_config.py  test_container_entrypoint.py  test_dashboard.py  test_duplicate_detection.py  test_exports.py  test_file_validation.py  test_global_search.py  test_health.py  test_invoice_api.py  test_migration_upgrade.py  test_models.py  test_ocr_jobs.py  test_ocr_mapper.py  test_ocr_provider_config.py  test_ocr_quota_alerts.py  test_ocr_quota_status_api.py  test_projects.py  test_rate_limiter.py  test_review_queue.py  test_tencent_ocr_client.py
(+144 files in other folders)
