[project]
name = "invoice-ocr-backend"
version = "0.1.0"
description = "FastAPI backend for the invoice OCR management system."
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography==46.0.3",
  "fastapi==0.116.0",
  "uvicorn[standard]==0.35.0",
  "pydantic-settings==2.10.1",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
